z-index player fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -266,6 +266,7 @@ a:hover{
 		animation: glitch 2s steps(20) infinite;
 	}
 	&__wrapper {
+		position: relative;
 		display: flex;
 		flex-flow: row wrap;
 		align-content: flex-start;
@@ -276,12 +277,15 @@ a:hover{
 		width: 90vw;
 		max-width: 1100px;
 		margin: 0 auto;
+		
 	}
 	&__wrapper-cell{
+		position: relative;
 		display: flex;
 		width: 49%;
 		flex-flow: column wrap;
 		justify-content: space-around;
+		z-index: 1;
 		.events,
 		.news{
 			@extend .custom-scroll;
@@ -291,6 +295,8 @@ a:hover{
 	}
 	&__wrapper-row{
 		width: 100%;
+		z-index: 2;
+		position: relative;
 	}
 	&__footer{
 		text-align: center;
